# namegen

./: .gitignore  CLAUDE.md  COMPONENT_FEATURES.md  REACT_GUI_SETUP.md  README.md  api_server.py  config.yaml  example.py  generator.py  gui.py  ideas.json  koru.yaml  latest_config.yaml  launch_gui.py  llm_scorer.py  markov_model.py  markov_namegen.py  minimal_test.py  name_generator.py  pyproject.toml  requirements.txt  saved_ratings copy.json  saved_ratings.json  simple_test.py  test_api_integration.py  test_components.py  test_constraint_system.py  test_full_system.py
ai/: __init__.py  cost_tracker.py  embeddings.py  llm.py  llm_scorer.py  utils.py
gui/: __init__.py  gui.py
markov/: __init__.py  constraint_sampler.py  dataset_stats.py  generator.py  markov_model.py  multi_component_sampler.py  name_generator.py
react_gui/: package-lock.json  package.json
saved_configs/: comi.yaml  my_config.yaml  test_01.yaml
scripts/: benchmark_sampling.py  clean_word_lists.py  profile_generation.py  test_constraints.py  time_embeddings.py
word_lists_clean/: american_cities.txt  american_companies.txt  american_desserts.txt  american_forenames.txt  american_states.txt  american_surnames.txt  animal_sounds.txt  animals.txt  art_types.txt  atomic_and_subatomic_particles.txt  banks.txt  birds_common_names.txt  board_games.txt  boat_types.txt  body_parts.txt  breakfast_cereals.txt  brythonic_deities.txt  cakes.txt  capitol_cities.txt  car_brands.txt  car_parts.txt  chinese_cities.txt  cities_worldwide.txt  clothing.txt  cocktails.txt  colours.txt  constellations_modern.txt  (+94 more)
(+14 files in other folders)
